2010-02-14  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Parse current-buffer as a xmltree.

2010-02-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-current-timeline-spec-string):
	new variable for storing the current timeline spec string.
	(twittering-last-requested-timeline-spec-string): removed.
	(twittering-last-retrieved-timeline-spec-string): removed.
	(twittering-set-current-timeline-spec-string): new function for
	referring the current timeline spec string.
	(twittering-current-timeline-spec-string): new function for
	referring the current timeline spec.
	(twittering-switch-timeline-if-necessary): new function for
	switching timeline.
	(twittering-mode-init-variables): explicitly initialize the
	current timeline spec.
	(twittering-http-get-default-sentinel): store the retrieved
	timeline even if it is not the current timeline.
	(twittering-get-and-render-timeline): switch timeline just after
	requested.
	(twittering-erase-old-statuses): reimplemented.
	(twittering-update-mode-line): use
	`twittering-current-timeline-spec-string'.
	(twittering-add-timeline-history): likewise.
	(twittering-current-timeline): likewise.
	(twittering-goto-next-status): likewise.

	* twittering-mode.el (twittering-add-statuses-to-timeline-data):
	integrated with `twittering-cache-status-datum'.
	(twittering-cache-status-datum): removed.

2010-02-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode-init-variables): make local
	variables by using `make-local-variable' in order to initialize
	the variables with the global values when invoking
	`twittering-mode'. You can initialize `twittering-icon-mode',
	`twittering-jojo-mode' and `twittering-scroll-mode' by using
	`setq' in your `.emacs'.

2010-02-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): remove a newline
	from `icon-string' that underlies the icon image.