@@ -1,3 +1,13 @@
+2010-02-14  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el (twittering-get-usernames-from-timeline): new
+	function for collecting user screen names in a timeline.
+	(twittering-make-list-from-assoc): removed.
+	(twittering-read-username-with-completion): use
+	`twittering-get-usernames-from-timeline' instead of
+	`twittering-make-list-from-assoc'.
+	(twittering-read-timeline-spec-with-completion): likewise.
+
 2010-02-14  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-http-get-list-index-sentinel):
